--- a/NEURODASH/views/juego/salaEspera.html
+++ b/NEURODASH/views/juego/salaEspera.html
@@ -41,7 +41,7 @@
 
   
   <!-- Modal -->
-  <div class="modal modal-espera fade " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal modal-espera fade " id="infoJugador" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm modal-dialogz modal-dialog-centered">
       <div class="modal-content modal-sala">
         <div class="modal-header bg-dark header-modal-sala">
@@ -61,7 +61,7 @@
             <div class="avatar-user">
               <img class="icon-liga" src="../../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
             </div>
-            <label class="text-white col-form-label name-user-sala font-4"></label>
+            <label class="text-white col-form-label name-user-sala font-4">Hola</label>
           </div>
 
           <!-- cuado el sistema tenga desarrollado las ligas -->
