--- a/NEURODASH/assets/css/pages/login.css
+++ b/NEURODASH/assets/css/pages/login.css
@@ -1,70 +1,106 @@
+/* ************************* base ************************* */
+@import url('../base/variables.css');
 @import url('../base/typography.css');
+
+/* ************************* Componentes ************************* */
+@import url('../components/forms.css');
+@import url('../components/buttons.css');
+@import url('../components/animaciones.css');
 @import url('../components/loader.css');
+@import url('../components/card.css');
+
+
+/* ************************* Layout ************************* */
+@import url('../layout/layaut.css');
+@import url('../layout/grid.css');
+@import url('../layout/flex.css');
+
+
+/* ************************* utilies ************************* */
 @import url('../utilities/utilices.css');
+@import url('../utilities/text.css');
+
+
+/* ************************* pages ************************* */
+/* @import url('pages/login.css'); */
+@import url('./entrenamiento.css');
+@import url('./salaEspera.css');
+@import url('./invitado.css');
+@import url('./configuraciones.css');
+@import url('./home.css');
+@import url('./pasaPalabras.css');
+@import url('./salasDisponibles.css');
+@import url('./unirserSala.css');
+@import url('./crearSala.css');
+
+/* ************************* theme ************************* */
+
+@import url('../theme/background.css');
 
 /* style tostas */
-#liveToast{
+#liveToast {
     background-color: #0000004b;
     border: 2px solid #ff0000;
     box-shadow: 0 0 20px #ff0000;
 }
 
-.toast-body{
+.toast-body {
     color: red;
     font-size: 15px;
     font-family: 'party-confetti';
 }
 
-.btn-close{
+.btn-close {
     background-color: #ff0000;
     /* box-shadow: 0 0 20px #ff0000; */
 }
 
-.toast-header{
+.toast-header {
     background-color: #0000004b;
 }
 
-.fa-triangle-exclamation{
+.fa-triangle-exclamation {
     color: red;
 }
 
-.title-toast{
-    color:  red;
+.title-toast {
+    color: red;
     font-size: 18px;
     font-family: 'Palmark';
 }
 
 
-.img-login{
+.img-login {
     width: 250px;
 }
 
-.img-google{
-    width:20px
+.img-google {
+    width: 20px
 }
 
-.backgound-start-back{
+.backgound-start-back {
     background-image: url('../../img/fondos-pantalla/fondo1.jpg') !important;
     background-color: #000000b9;
     background-blend-mode: soft-light;
-    background-size: cover; /* cubre todo*/
+    background-size: cover;
+    /* cubre todo*/
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:'Poppins', 'sans-serif';
+    font-family: 'Poppins', 'sans-serif';
 }
 
-.backgroud-principal{
+.backgroud-principal {
     background-image: url('fondo1.jpg') !important;
     background: #00000080;
     background-blend-mode: soft-light;
     background-size: cover;
 }
 
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -72,17 +108,17 @@ body{
     background: #444;
 }
 
-.container-forms{
+.container-forms {
     position: relative;
     width: 70vw;
     height: 80vh;
     background: #00000088;
     border-radius: 15px;
-    box-shadow: 0 4px 20px 0 rgb(0, 0, 0, 0.3),0 6px 20px 0 rgb(0, 0, 0, 0.3);
+    box-shadow: 0 4px 20px 0 rgb(0, 0, 0, 0.3), 0 6px 20px 0 rgb(0, 0, 0, 0.3);
     overflow: hidden;
 }
 
-.container-forms::before{
+.container-forms::before {
     content: "";
     position: absolute;
     top: 0;
@@ -100,11 +136,11 @@ body{
     transition: 1s ease-in-out;
 }
 
-.container-forms.sign-up-mode::before{
+.container-forms.sign-up-mode::before {
     transform: translateX(0);
 }
 
-.signin-signup{
+.signin-signup {
     position: absolute;
     top: 0;
     left: 0;
@@ -118,7 +154,7 @@ body{
 
 }
 
-form{
+form {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -128,20 +164,20 @@ form{
     padding: 0 10px;
 }
 
-form.sign-in-form{
+form.sign-in-form {
     opacity: 1;
     transition: 0.5 ease-in-out;
     transition-delay: 1s;
 }
 
-form.sign-up-form{
+form.sign-up-form {
     opacity: 0;
     transition: 0.5 ease-in-out;
     transition-delay: 1s;
 }
 
 
-.title-forms{
+.title-forms {
     font-size: 2em;
     color: #f550f5 !important;
     margin-bottom: 10px;
@@ -151,7 +187,7 @@ form.sign-up-form{
 
 
 
-.input-field{
+.input-field {
     width: 100%;
     height: 70px;
     /* background-color: #f0f0f0f0; */
@@ -163,15 +199,15 @@ form.sign-up-form{
 
 }
 
-.input-field i{
+.input-field i {
     flex: 0.5;
     text-align: center;
-    color:  #d400ff;
+    color: #d400ff;
     font-size: 18px;
 
 }
 
-.input-field input{
+.input-field input {
     /* flex: 5; */
     background: #fff;
     width: 100%;
@@ -188,15 +224,15 @@ form.sign-up-form{
     font-size: 15px;
 }
 
-.input-field input:invalid{
+.input-field input:invalid {
     border: 3px solid red;
 }
 
-.input-field input:valid{
+.input-field input:valid {
     border: 3px solid green;
 }
 
-.input-field input:focus{
+.input-field input:focus {
     transform: translateY(4px);
     box-shadow: 1px 2px 20px 0px #e100ff;
 }
@@ -234,8 +270,8 @@ form.sign-up-form{
 
 
 .forgot-passwordL {
-    text-align: right; 
-    margin-bottom: 2px; 
+    text-align: right;
+    margin-bottom: 2px;
     width: 100%;
 }
 
@@ -249,7 +285,7 @@ form.sign-up-form{
     text-decoration: underline;
 }
 
-.btn{
+.btn {
     width: 200px;
     height: 50px;
     border: none;
@@ -262,12 +298,12 @@ form.sign-up-form{
     cursor: pointer;
 }
 
-.btn:hover{
+.btn:hover {
     background: #0e8fac;
     color: #2a103f;
 }
 
-.panels-container{
+.panels-container {
     position: absolute;
     top: 0;
     left: 0;
@@ -275,10 +311,10 @@ form.sign-up-form{
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-around;   
+    justify-content: space-around;
 }
 
-.panel{
+.panel {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -288,26 +324,26 @@ form.sign-up-form{
     padding: 0 10px;
     text-align: center;
     z-index: 6;
-   
+
 }
 
-.panel h3{
+.panel h3 {
     font-size: 26px;
     font-family: 'Langdon';
     /* font-weight: 600; */
 }
 
-.panel p{
+.panel p {
     font-size: 20px;
     padding: 10px 0;
     font-family: 'Langdon';
 }
 
-.left-panel{
-  pointer-events: none;  
+.left-panel {
+    pointer-events: none;
 }
 
-.content{
+.content {
     color: #fff;
     transition: 1.1s ease-in-out;
     transition-delay: 0.5s;
@@ -315,18 +351,16 @@ form.sign-up-form{
     border-radius: 20px; */
 }
 
-.content h3{
-    
-}
+.content h3 {}
 
-.image-description{
+.image-description {
     width: 100%;
     transition: 1.1s ease-in-out;
     transition-delay: 0.4s;
 
 }
 
-.account-text{
+.account-text {
     display: none;
 }
 
@@ -334,39 +368,39 @@ form.sign-up-form{
 /* ********************** animaciones ************************** */
 
 .left-panel .image-description,
-.left-panel .content{
+.left-panel .content {
     transform: translateX(-200%);
 }
 
 .right-panel .image-description,
-.right-panel  .content{
+.right-panel .content {
     transform: translateX(0);
 }
 
 .container-forms.sign-up-mode .right-panel .image-description,
-.container-forms.sign-up-mode .right-panel .content{
+.container-forms.sign-up-mode .right-panel .content {
     transform: translateX(200%);
 }
 
 .container-forms.sign-up-mode .left-panel .image-description,
-.container-forms.sign-up-mode .left-panel .content{
+.container-forms.sign-up-mode .left-panel .content {
     transform: translateX(0);
 }
 
 
-.container-forms.sign-up-mode form.sign-in-form{
+.container-forms.sign-up-mode form.sign-in-form {
     opacity: 0;
 }
 
-.container-forms.sign-up-mode form.sign-up-form{
+.container-forms.sign-up-mode form.sign-up-form {
     opacity: 1;
 }
 
-.container-forms.sign-up-mode .right-panel{
+.container-forms.sign-up-mode .right-panel {
     pointer-events: none;
 }
 
-.container-forms.sign-up-mode .left-panel{
+.container-forms.sign-up-mode .left-panel {
     pointer-events: all;
 }
 
@@ -375,38 +409,39 @@ form.sign-up-form{
 /* resposive */
 
 @media (max-width: 779px) {
-    .container-forms{
+    .container-forms {
         width: 100vw;
         height: 100vh;
     }
 }
 
-@media (max-width: 635px){
-    .container-forms::before{
+@media (max-width: 635px) {
+    .container-forms::before {
         display: none;
     }
-    
-    form{
+
+    form {
         width: 80%;
     }
 
-    form.sign-up-form{
+    form.sign-up-form {
         display: none;
     }
 
-    .container-forms.sign-up-mode2 form.sign-up-form{
+    .container-forms.sign-up-mode2 form.sign-up-form {
         display: flex;
         opacity: 1;
     }
 
-    .container-forms.sign-up-mode2 form.sign-in-form{
+    .container-forms.sign-up-mode2 form.sign-in-form {
         display: none;
     }
 
-    .panels-container{
+    .panels-container {
         display: none;
     }
-    .account-text{
+
+    .account-text {
         display: initial;
         margin-top: 30px;
     }
@@ -423,7 +458,8 @@ form.sign-up-form{
     font-size: 15px;
 }
 
-.form_style:focus, .btn-form:focus {
+.form_style:focus,
+.btn-form:focus {
     transform: translateY(4px);
     box-shadow: 1px 2px 0px 0px #5c4ce9;
 }
@@ -444,8 +480,8 @@ form.sign-up-form{
     box-shadow: 5px 5px 0px hsl(0, 0%, 21%);
     transition: all 0.3s ease;
     scale: 0.9;
-  }
-  
+}
+
 .comic-button:hover {
     background-color: #9900ff;
     color: #000000;
@@ -453,14 +489,14 @@ form.sign-up-form{
     box-shadow: 5px 5px 0px #800091;
 
 }
-  
-  .comic-button:active {
+
+.comic-button:active {
     background-color: #e682ff;
     box-shadow: none;
     transform: translateY(4px);
-  }
+}
 
-  .loader-default{
+.loader-default {
     display: block;
     position: absolute;
     top: 0;
@@ -468,4 +504,4 @@ form.sign-up-form{
     width: 100vw;
     height: 100vh;
     background: #000000;
-  }
+}
